create ability to change the repo details + refac.
